# component-async-demo

./: .gitignore  Cargo.toml  README.md
backpressure-callee/: Cargo.toml
backpressure-callee/src/: lib.rs
backpressure-caller/: Cargo.toml
backpressure-caller/src/: lib.rs
cancel-callee/: Cargo.toml
cancel-callee/src/: lib.rs
cancel-caller/: Cargo.toml
cancel-caller/src/: lib.rs
guest/: Cargo.toml
guest-async/: Cargo.toml
guest-async-stackful/: Cargo.toml
guest-async-stackful/src/: lib.rs
guest-async/src/: lib.rs
guest-sync/: Cargo.toml
guest-sync/src/: lib.rs
guest-wait/: Cargo.toml
guest-wait/src/: lib.rs
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
http/: Cargo.toml
http-echo/: Cargo.toml
http-echo/src/: lib.rs
http/src/: lib.rs
middleware/: Cargo.toml
middleware/src/: lib.rs
poll/: Cargo.toml
poll/src/: lib.rs
transmit-callee/: Cargo.toml
transmit-callee/src/: lib.rs
transmit-caller/: Cargo.toml
transmit-caller/src/: lib.rs
wit/: round-trip.wit  test.wit
yield-callee/: Cargo.toml
yield-callee/src/: lib.rs
yield-caller/: Cargo.toml
yield-caller/src/: lib.rs
