[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
tokio = { version = "1.36.0", features = ["fs", "process", "macros", "rt-multi-thread", "time"] }
wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "async" }
wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "async" }
wasi-http-draft = { path = "../http" }

[dev-dependencies]
flate2 = "1.0.30"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
reqwest = "0.12.3"
tempfile = "3.10.1"
wasm-compose = { git = "https://github.com/dicej/wasm-tools", branch = "async" }
wasmparser = { git = "https://github.com/dicej/wasm-tools", branch = "async" }
wit-component = { git = "https://github.com/dicej/wasm-tools", branch = "async" }
